# 2021fa-420-JSMACH

./: .gitignore  CMakeLists.txt  ClassField.cpp  ClassField.h  ClassMethod.cpp  ClassMethod.h  ConsoleView.cpp  ConsoleView.h  GUIController.cpp  GUIController.h  GUIView.cpp  GUIView.h  JSONFileSys.cpp  JSONFileSys.h  MethodParameter.cpp  MethodParameter.h  README.md  UMLAttribute.cpp  UMLAttribute.h  UMLClass.cpp  UMLClass.h  UMLController.cpp  UMLController.h  UMLException.hpp  UMLModel.cpp  UMLModel.h  UMLRelationship.cpp  UMLRelationship.h  conanfile.txt  jsmach_tests  jsmach_uml 2  main.cpp  test.cpp
.github/workflows/: blank.yml  cmake.yml  main.yml  stale.yml
test/: Makefile.am
tests/: UMLClass_Test.cpp  UMLModel_Test.cpp
